2024-11-04T01:19:31Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11656449965 # 628
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-04
* notice: last 14d: unq all: 6 8
* notice: prev accum: outdated-unq outdated-all / unq all: 2270 4520 / 2279 4529
* notice: next accum: outdated-unq outdated-all / unq all: 2271 4521 / 2279 4529
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-10-20] / []

2024-11-02T01:16:30Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11638628520 # 624
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-02
* notice: last 14d: unq all: 7 9
* notice: prev accum: outdated-unq outdated-all / unq all: 2270 4520 / 2278 4528
* notice: next accum: outdated-unq outdated-all / unq all: 2270 4520 / 2279 4529
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-11-01]

2024-10-31T12:33:29Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11611980275 # 621
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-31
* notice: last 14d: unq all: 7 8
* notice: prev accum: outdated-unq outdated-all / unq all: 2267 4517 / 2278 4528
* notice: next accum: outdated-unq outdated-all / unq all: 2270 4520 / 2278 4528
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-10-17] / []

2024-10-30T12:34:05Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11593271447 # 619