@@ -3,11 +3,6 @@
   "uniques": 6,
   "clones": [
     {
-      "timestamp": "2024-10-21T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2024-10-23T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -39,6 +34,11 @@
     },
     {
       "timestamp": "2024-11-01T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-11-04T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
